<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>ee.ria.tara-admin</groupId>
    <artifactId>tara-admin-parent</artifactId>
    <version>1.11.0</version>
    <packaging>pom</packaging>
    <licenses>
        <license>
            <name>MIT</name>
            <url>https://opensource.org/licenses/MIT</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <modules>
        <module>tara-admin-api</module>
        <module>tara-admin-api-schema</module>
        <module>tara-admin-import</module>
    </modules>

    <properties>
        <maven.compiler.release>17</maven.compiler.release>
        <wiremock.version>3.13.0</wiremock.version>
    </properties>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.4.6</version>
    </parent>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <!--
                        Setting target value here is only needed to fix IntelliJ IDEA not detecting target version from
                        global maven.compiler.release property. Maven compiler works correctly without it.
                    -->
                    <target>${maven.compiler.release}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <!-- Allow only single edition (currently latest is jdk18on) of Bouncy Castle libraries.
                                     Other libraries may reference different editions of the same Bouncy Castle library
                                     (bcprov-jdk15on vs bcprov-jdk18on), but duplicate classes on classpath must be
                                     avoided. -->
                                <bannedDependencies>
                                    <excludes>
                                        <exclude>org.bouncycastle:*</exclude>
                                    </excludes>
                                    <includes>
                                        <include>org.bouncycastle:*-jdk18on</include>
                                    </includes>
                                </bannedDependencies>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>
